tests/machine/x/zig/typed_var.error
Error on line 0: output mismatch
-- got --
0
-- want --
<nil>
1: const std = @import("std");
